ApexSalesforceTriggerHandlerFramework/force-app/main/default/objects/Position__c/fields/ApplicationPeriodEndDate__c.field-meta.xml
<CustomField>
    <fullName>ApplicationPeriodEndDate__c</fullName>
    <label>Application Period End Date</label>
    <type>Date</type>
</CustomField>