ApexSalesforceTriggerHandlerFramework/force-app/main/default/objects/Position__c/fields/ApplicationPeriodStartDate__c.field-meta.xml
<CustomField>
    <fullName>ApplicationPeriodStartDate__c</fullName>
    <label>Application Period Start Date</label>
    <type>Date</type>
</CustomField>