ApexSalesforceTriggerHandlerFramework/force-app/main/default/objects/Position__c/fields/EducationalRequirments__c.field-meta.xml
<CustomField>
    <fullName>EducationalRequirments__c</fullName>
    <label>Educational Requirments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>