ApexSalesforceTriggerHandlerFramework/force-app/main/default/objects/Position__c/fields/MaxYearPay__c.field-meta.xml
<CustomField>
    <fullName>MaxYearPay__c</fullName>
    <label>Max Year Pay</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>