ApexSalesforceTriggerHandlerFramework/force-app/main/default/objects/Position__c/fields/MinYearPay__c.field-meta.xml
<CustomField>
    <fullName>MinYearPay__c</fullName>
    <label>Min Year Pay</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>