ApexSalesforceTriggerHandlerFramework/force-app/main/default/objects/Position__c/fields/SkillRequired__c.field-meta.xml
<CustomField>
    <fullName>SkillRequired__c</fullName>
    <label>Skill Required</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>