ApexSalesforceTriggerHandlerFramework/force-app/main/default/objects/Position__c/recordTypes/IT.recordType-meta.xml
<RecordType>
    <fullName>IT</fullName>
    <active>true</active>
    <description>RT for positions in job information related to information technology</description>
    <label>IT</label>
</RecordType>