ApexSalesforceTriggerHandlerFramework/force-app/main/default/objects/Position__c/validationRules/MaxYearPayCheckInputRule.validationRule-meta.xml
<ValidationRule>
    <fullName>MaxYearPayCheckInputRule</fullName>
    <active>true</active>
    <description>Show error message if Max Year Pay is less than or equal to Min Year Pay</description>
    <errorConditionFormula>MaxYearPay__c &lt;=  MinYearPay__c</errorConditionFormula>
    <errorDisplayField>MaxYearPay__c</errorDisplayField>
    <errorMessage>The entered value for Max Year Pay is invalid.</errorMessage>
</ValidationRule>