ApexSalesforceTriggerHandlerFramework/force-app/main/default/objects/Position__c/validationRules/MinYearPayCheckInputRule.validationRule-meta.xml
<ValidationRule>
    <fullName>MinYearPayCheckInputRule</fullName>
    <active>true</active>
    <description>Show error message if Min Year Pay is greater than or equal to Max Year Pay</description>
    <errorConditionFormula>MinYearPay__c &gt;= MaxYearPay__c</errorConditionFormula>
    <errorDisplayField>MinYearPay__c</errorDisplayField>
    <errorMessage>The entered value for Min Year Pay is invalid.</errorMessage>
</ValidationRule>